--- a/src/app/component/forgotpassword/forgotpassword.component.html
+++ b/src/app/component/forgotpassword/forgotpassword.component.html
@@ -1,36 +1,50 @@
 <link rel="login.component.css">
-<div class="container-fluid">
-<div class ="row">
-<div class="col">
+<style>
+ 
 
-<div class="col-4">
-<div class ="card shadow"> 
+</style>
+<div  class=" h-100 d-flex justify-content-center align-items-center"> 
+<div>
+
+  
+
+<div class="container-fluid mx-auto "> 
+<div class ="row  mx-auto ">
+<div class="col  mx-auto">
+
+<div class="col-13">
+<div    style="transform: translate(-50%,-0%);" class ="card  shadow mx-auto"> 
 
 
-    <div class="card-body">
+   <div class="card-body mx-auto" >
 
 
-        <form> 
+       <form> 
 <div class="mb-3">
+ <br>    
+
     <h1> Reset Password </h1>
 </div>  
         <div class="mb-3">
             <label for="formGroupExampleInput">Email</label>
-            <input type="email" class="form-control" id="formGroupExampleInput" placeholder="email">
+            <input type="email" class="form-control"  #passwordResetEmail required  placeholder="email">
         </div>
         
         
         <br>
-    <button type="button" class="btn btn-info"> Send Rest Link </button>
-        <div class="row">
+    <button type="button" class="btn btn-info" (click)="auth.ForgotPassword(passwordResetEmail.value)"> Send Rest Link </button>
+    <div class="row">
+        <div class="col-10">
+<br>    
+        <a [routerLink]="['/login']"  style="text-decoration:none">  Did you remembre    ? <span class="text-danger"> log in  here </span></a>
+</div>
+<div class="col-5">
+    <br>
+            
 
-    <div class="col-5">
-        <br>
-                 <a [routerLink]="['/login']" style="text-decoration:none" class="text-dark">   Click to login    </a>
+    </div>
 
-        </div>
-
-        </div>
+    </div>
         </form>
     </div>
 </div>
