--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,17 +1,29 @@
-<link rel="login.component.css">
-<div class="container-fluid">
-<div class ="row">
-<div class="col">
+ 
+ <link rel="login.component.css">
+ <style>
+ 
 
-<div class="col-4">
-<div class ="card shadow"> 
+ </style>
+ <div  class=" h-100 d-flex justify-content-center align-items-center"> 
+ <div>
+
+   
+ 
+<div class="container-fluid mx-auto "> 
+<div class ="row  mx-auto ">
+<div class="col  mx-auto">
+
+<div class="col-13">
+<div    style="transform: translate(-50%,-0%);" class ="card  shadow mx-auto"> 
 
 
-    <div class="card-body">
+    <div class="card-body mx-auto" >
 
 
         <form> 
 <div class="mb-3">
+  <br>    
+    
     <h1> login</h1>
 </div>  
         <div class="mb-3">
@@ -47,4 +59,7 @@
 
 </div>
 
+</div>
+
+</div>
 </div>
