--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,34 @@
+<link rel="icon"   href="favicon.ico">
+ 
+ 
+<nav class="navbar navbar-expand-lg navbar-light bg-light"  style="font-size: 19px;" >
+        <div class="container-fluid">
+          <a class="navbar-brand" [routerLink]="['/home']">
 
+            <img src="assets/cima.png" width="50" alt="">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto me-auto mb-2 mb-lg-8">
+              <li class=" px-1 nav-item" >
+                <a class="nav-link active" aria-current="page"  [routerLink]="['/home']">Home</a>
+              </li>
+              <li class="nav-item px-1">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item dropdown px-1 "><a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Account </a><div class="dropdown-menu"><a  class="dropdown-item"   *ngIf="auth.isLoggedIn==false "[routerLink]="['/login']">login</a><a  *ngIf="auth.isLoggedIn" (click)="logout()" class="dropdown-item" href="#">logout</a><a class="dropdown-item"   *ngIf="auth.isLoggedandVerified==true " [routerLink]="['/profile']" >Profile</a> <a class="dropdown-item" [routerLink]="['/dashboard']" >  Dashboard </a></div>
+              </li></ul>
+            <form class="d-flex" role="search"  style="size:3cm">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+ <br>
+ <br>
+ <br>
+    
 <router-outlet> </router-outlet>
