--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,1 +1,72 @@
-<p>home works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <style>
+  
+  #im {
+  width: 20px;
+  height: 150px;
+}
+
+  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, ">
+    <title>Document</title>
+</head>
+<body>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div  style="padding: 40px;"  class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="./assets/img2.png" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="./assets/img1.jpg" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img   class="d-block w-100" src="./assets/img1.jpg" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+     
+        <h1>Events</h1>
+        <table class="table  table-dark ">
+          <thead>
+            <tr>
+              <th scope="col"></th>
+              <th scope="col">Image</th>
+              <th scope="col">Nom du Spectacle</th>
+              <th scope="col">Adresse</th>
+              <th scope="col">Date</th>
+            </tr>
+          </thead>
+          <tbody   >
+            <tr *ngFor=" let spect of spectacles ">
+              <th scope="row"></th>
+              <td ><img    id="im" src=""></td>
+              <td>{{spect.noms}}</td>
+              <td>{{spect.adresse}}</td>
+              <td>{{spect.dateCreation | date: "dd/MM/yyyy" }}</td>
+              
+ 
+            </tr>
+            
+            
+          </tbody>
+        </table>
+       
+</body>
+</html> 
